--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,10 @@ jobs:
       - name: Run backend tests (placeholder)
         working-directory: app/backend
         run: echo "No tests yet"
+      - name: Backend dependency security scan
+        working-directory: app/backend
+        run: npm audit --audit-level=high || true
+
 
   frontend-ci:
     name: Frontend CI
@@ -48,4 +52,27 @@ jobs:
       - name: Build frontend
         working-directory: app/frontend
         run: npm run build
+      - name: Frontend dependency security scan
+        working-directory: app/frontend
+        run: npm audit --audit-level=high || true
+
+   docker-build:
+     name: Docker Build
+     runs-on: ubuntu-latest
+     needs: [backend-ci, frontend-ci]
+
+     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build Backend Docker image
+        run: docker build -t backend:test app/backend
+
+      - name: Build Frontend Docker image
+        run: docker build -t frontend:test app/frontend
+     
+   
 
